offscreen nav fix

--- a/src/files/styles/_header.less
+++ b/src/files/styles/_header.less
@@ -130,7 +130,7 @@
 .offscreen-promo--link {
 	display: block;
 	padding: 15px 25px 15px 15px;
-	color: @gray;
+	color: @gray-dark;
 	font-size: @font-size-small;
 	text-transform: uppercase;
 }
