--- a/src/files/styles/_nav.less
+++ b/src/files/styles/_nav.less
@@ -608,13 +608,13 @@
         }
     }
 
-    .open .navmenu--link,
-    .open .navmenu--link:hover,
-    .open .navmenu--link:focus {
+    .navmenu--node .navmenu--link,
+    .navmenu--node .navmenu--link:hover,
+    .navmenu--node .navmenu--link:focus {
         background-color: transparent;
     }
 
-    .open > .navmenu--submenu {
+    .navmenu--node > .navmenu--submenu {
         background-color: #f8f8f8;
         box-shadow: inset 0 3px 8px rgba(0,0,0,0.1);
     }
@@ -626,6 +626,7 @@
 
     .navmenu--submenu {
         padding: 0;
+        margin-bottom: 0;
     }
 
     .navmenu--submenuitem {
@@ -643,6 +644,7 @@
 
     .dropdown-header {
         padding: 10px 25px;
+        color: #888;
     }
 
     .navmenu--submenulink {
@@ -651,6 +653,7 @@
         font-size: 12px;
         font-weight: bold;
         text-transform: uppercase;
+        color: #4c4c4c;
 
         &:hover,
         &:focus {
